--- a/packages/radix-vue/package.json
+++ b/packages/radix-vue/package.json
@@ -16,31 +16,30 @@
   "keywords": [],
   "exports": {
     ".": {
-      "require": "./dist/index.umd.cjs",
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.cjs",
       "import": "./dist/index.js"
     },
     "./nuxt": {
-      "require": "./dist/nuxt/index.cjs",
+      "default": "./dist/nuxt/index.cjs",
       "import": "./dist/nuxt/index.mjs"
     },
     "./resolver": {
       "import": "./dist/resolver/index.mjs"
-    },
-    "./index.css": "./dist/index.css"
+    }
   },
-  "main": "./dist/index.umd.cjs",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "typings": "./dist/index.d.ts",
   "files": [
     "./dist",
     "./LICENSE"
   ],
   "scripts": {
-    "build": "pnpm type-check && pnpm build-only",
+    "build": "pnpm type-check && pnpm build-only && pnpm type-gen",
     "build-only": "vite build",
     "type-check": "vue-tsc -p tsconfig.check.json --noEmit",
-    "type-gen": "vue-tsc --declaration  --emitDeclarationOnly",
+    "type-gen": "vue-tsc --declaration --emitDeclarationOnly -p ./tsconfig.build.json && api-extractor run && rimraf temp",
     "test": "vitest",
     "pub:release": "pnpm publish --access public"
   },
@@ -50,12 +49,13 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
+    "@microsoft/api-extractor": "^7.38.0",
     "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^7.0.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.18",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vitest/coverage-istanbul": "^0.33.0",
     "@vue/test-utils": "^2.4.0",
     "@vue/tsconfig": "^0.4.0",
@@ -64,15 +64,13 @@
     "@vueuse/shared": "^10.4.1",
     "aria-hidden": "^1.2.3",
     "defu": "^6.1.2",
-    "dts-bundle": "^0.7.3",
     "jsdom": "^22.1.0",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vite-plugin-dts": "^3.3.1",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
     "vitest": "^0.34.3",
     "vitest-axe": "0.1.0",
     "vitest-canvas-mock": "^0.3.3",
     "vue": "^3.3.4",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^1.8.19"
   }
 }
